MainActivity.kt activity_main.xml PurchaseActivity.kt activity_purchase.xml 13:23

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/alfa_slab_one</item>
         <item>@font/anton</item>
         <item>@font/archivo_black</item>
+        <item>@font/archivo_narrow_bold</item>
         <item>@font/arizonia</item>
         <item>@font/bangers</item>
         <item>@font/bungee</item>
