--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -114,7 +114,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintVertical_bias="0.0">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mainTop"
@@ -177,7 +177,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout2"
+                android:id="@+id/purchaseBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -226,6 +226,44 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/purchaseIcon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/productImage">
+
+                    <ImageView
+                        android:id="@+id/productLike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
+                        app:tint="@color/main" />
+
+                    <ImageView
+                        android:id="@+id/productMessage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_baseline_message_24"
+                        app:tint="@color/main" />
+
+                    <ImageView
+                        android:id="@+id/productshare"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_baseline_share_24"
+                        app:tint="@color/main" />
+
+
+                </LinearLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
@@ -233,17 +271,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="monospace"
-                android:text="\n\n투어버스 태일, 페이퍼토이 태일, 네오시티 보이스키링 B 태일 (+ 본품), 슬로우애시드 2차 셀포 태일일괄 양도합니다.
-                \n* 하자 X, 개별 양도 X\n* 준등기(+1800), 우체국 택배(+3500) 가능"
+                android:text="투어버스 태일, 페이퍼토이 태일, 네오시티 보이스키링 B 태일 (+ 본품), 슬로우애시드 2차 셀포 태일일괄 양도합니다.                 \n* 하자 X, 개별 양도 X\n* 준등기(+1800), 우체국 택배(+3500) 가능\n\n\n"
                 android:textAllCaps="false"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/purchasePriceText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+                app:layout_constraintTop_toBottomOf="@+id/purchaseBox" />
 
             <TextView
                 android:id="@+id/purchaseD"
@@ -254,13 +294,8 @@
                 android:text="D-7 Days"
                 android:textColor="@color/navy"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
+                app:layout_constraintBottom_toBottomOf="@+id/productDetail"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/purchasePriceText"
@@ -268,7 +303,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/archivo_black"
+                android:fontFamily="@font/anton"
                 android:text="▶ 시작 입찰가 [START]\n▶ 현재 최고가 [TOP] \n▶ 즉시 구매가 [BUY]"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -276,15 +311,50 @@
 
             <TextView
                 android:id="@+id/purchasePriceValue"
-                android:layout_width="120dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:layout_marginTop="10dp"
-                android:text="200,000원"
-                android:fontFamily="@font/archivo_black"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/anton"
+                android:text="W 200,000\nW 290,000\nW 320,000"
+                android:textAlignment="textEnd"
+                android:textColor="#F44336"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/productDetail" />
+
+            <Button
+                android:id="@+id/purchaseSend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/navy"
+                android:text="SEND"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
+                app:layout_constraintTop_toBottomOf="@+id/purchasePriceText" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:ems="10"
+                android:hint="W"
+                android:inputType="number"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/purchasePriceText" />
+
+            <Button
+                android:id="@+id/purchaseNow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="@color/navy"
+                android:text="BUY NOW"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/purchasePriceValue" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
