--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -330,11 +330,11 @@
                 android:backgroundTint="@color/navy"
                 android:text="SEND"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
+                app:layout_constraintStart_toEndOf="@+id/titleEdit"
                 app:layout_constraintTop_toBottomOf="@+id/purchasePriceText" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/titleEdit"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
