--- a/app/src/main/res/layout/activity_product_reg.xml
+++ b/app/src/main/res/layout/activity_product_reg.xml
@@ -129,7 +129,7 @@
         app:layout_constraintTop_toBottomOf="@+id/fastEdit" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/writeEdit"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginStart="40dp"
