첫화면+회원가입intent

--- a/app/src/main/res/layout/activity_main_reg.xml
+++ b/app/src/main/res/layout/activity_main_reg.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="#2196F3"
     android:orientation="vertical"
     tools:context=".MainActivity_reg">
 
@@ -35,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="GOODS\nMARKET"
+            android:text="GOODS\nAUCTION"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -155,6 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:backgroundTint="#2196F3"
                 android:text="인증" />
 
         </LinearLayout>
@@ -183,6 +185,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="300dp"
+                android:backgroundTint="#2196F3"
                 android:text="우편번호" />
 
         </LinearLayout>
@@ -198,6 +201,7 @@
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#2196F3"
             android:text="회원가입" />
     </LinearLayout>
 
