--- a/app/src/main/res/menu/menu_reg.xml
+++ b/app/src/main/res/menu/menu_reg.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_signin"
+        android:id="@+id/btnSignin"
         android:title="로그인" />
     <item
-        android:id="@+id/action_signup"
+        android:id="@+id/btnSignup"
         android:title="회원 가입" />
 
 </menu>
