상품등록할 때 적은 정보 DB에 Insert되게끔 했습니다(카테고리 포함)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:id="@+id/loginLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GOODS\nMARKET"
+        android:text="GOODS\nAUCTION"
         android:textAlignment="center"
         android:textColor="@color/navy"
         android:textSize="36sp"
