--- a/app/src/main/res/layout/activity_main_info.xml
+++ b/app/src/main/res/layout/activity_main_info.xml
@@ -62,7 +62,10 @@
             android:layout_height="wrap_content"
             android:background="@color/main"
             android:backgroundTint="#F1E1E1"
+            android:enabled="false"
             android:padding="20dp"
+            android:textColor="#706D6D"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/btnGoods"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.046"
